2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Changes to implement propagation of configuration
	information and routing of spikes.

2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsource.cc: Updated to use global_index.

2008-10-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsource.cc, datafile.h, datafile.cc: New files.

	* Makefile.am: Added eventsource.

2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.cc (BGL): #include <rts.h>

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* application_map.hh: #include "rudeconfig/src/config.h" instead
	of <rude/config.h>.

	* Makefile.am (music_CXXFLAGS): Added -I$(top_srcdir).

	* music.cc (get_rank): Support OPENMPI.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* parse.hh, parse.cc: Moved to src.

	* music.cc: Rewritten.

	* Makefile.am (music_SOURCES): Added application_map.hh,
	application_map.cc.

2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music.cc, parse.cc, parse.hh: New files.

2007-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Pang!
